[project]
name = "pandas_market_calendars"
version = "5.2.3"
authors = [
    { name = "Ryan Sheftel", email = "rsheftel@alumni.upenn.edu" },
]
description = "Market and exchange trading calendars for pandas"
readme = "README.rst"
requires-python = ">=3.8"
keywords = ["trading", "exchanges", "markets", "OTC", "datetime", "holiday", "business days"]
license = { text = "MIT" }
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Developers',
    'Topic :: Software Development',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: 3.14',
]
dependencies = [
    "exchange-calendars>=3.3",
    "pandas>=1.1",
]

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["pandas_market_calendars", "pandas_market_calendars.calendars", "pandas_market_calendars.holidays"]

[project.urls]
"Homepage" = "https://github.com/rsheftel/pandas_market_calendars"
"Source" = "https://github.com/rsheftel/pandas_market_calendars"
"Documentation" = "https://pandas-market-calendars.readthedocs.io/en/latest/"
"Changelog" = "https://pandas-market-calendars.readthedocs.io/en/latest/change_log.html"
"Bug Tracker" = "https://github.com/rsheftel/pandas_market_calendars/issues"

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_also = [
    # Don't complain about missing debug-only code:
    "def __repr__",
    "if self\\.debug",
    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",
    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == .__main__.:",
    # Don't complain about abstract methods, they aren't run:
    "@(abc\\.)?abstractmethod",
]

ignore_errors = true

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 88
skip_gitignore = true
skip_glob = ["tests/data", "profiling"]
known_first_party = ["black", "blib2to3", "blackd", "_black_version"]

[dependency-groups]
dev = [
    "black>=24.8.0",
    "build>=1.2.2.post1",
    "pandas-stubs>=2.0.3.230814",
    "pytest>=8.3.5",
    "twine>=6.1.0",
]
