[project]
name = "pandas_market_calendars"
version = "5.3.0"
authors = [
    { name = "Ryan Sheftel", email = "rsheftel@alumni.upenn.edu" },
]
description = "Market and exchange trading calendars for pandas"
readme = "README.rst"
requires-python = ">=3.10"
keywords = ["trading", "exchanges", "markets", "OTC", "datetime", "holiday", "business days"]
license = { text = "MIT" }
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Developers',
    'Topic :: Software Development',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: 3.14',
]
dependencies = [
    "exchange-calendars>=3.3",
    "pandas>=1.1",
]

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["pandas_market_calendars", "pandas_market_calendars.calendars", "pandas_market_calendars.holidays"]

[project.urls]
"Homepage" = "https://github.com/rsheftel/pandas_market_calendars"
"Source" = "https://github.com/rsheftel/pandas_market_calendars"
"Documentation" = "https://pandas-market-calendars.readthedocs.io/en/latest/"
"Changelog" = "https://pandas-market-calendars.readthedocs.io/en/latest/change_log.html"
"Bug Tracker" = "https://github.com/rsheftel/pandas_market_calendars/issues"

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_also = [
    # Don't complain about missing debug-only code:
    "def __repr__",
    "if self\\.debug",
    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",
    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == .__main__.:",
    # Don't complain about abstract methods, they aren't run:
    "@(abc\\.)?abstractmethod",
]

ignore_errors = true

[tool.ruff]
line-length = 120
target-version = "py38"
exclude = [
    ".git",
    ".venv",
    "build",
    "dist",
    "*.egg-info",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # line length (handled by formatter)
    "F403",   # star imports (used extensively in calendar imports)
    "F405",   # names from star imports (consequence of F403)
    "E402",   # module level import not at top (used in sifma.py)
    "B019",   # lru_cache on methods (used intentionally in sifma.py)
    "B028",   # stacklevel in warnings (follow-up work)
    "B904",   # raise from (follow-up work)
    "SIM101", # merge isinstance calls (follow-up work)
    "SIM105", # contextlib.suppress (follow-up work)
    "SIM108", # ternary operator (can reduce readability)
    "SIM102", # nested if statements (can reduce readability)
    "UP031",  # printf-style formatting (allow in notebooks)
    "RUF005", # iterable unpacking (follow-up work)
    "RUF012", # mutable class attributes (used in calendar definitions)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F841", "B018", "B011"]  # unused variables, useless expressions, assert False OK in tests
"examples/*" = ["E731", "B018"]  # lambdas and useless expressions OK in notebooks

[tool.ruff.lint.isort]
known-first-party = ["pandas_market_calendars"]
force-single-line = false
lines-after-imports = 2

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true

[tool.ty]
# Suppress pandas/numpy type errors until pandas 3.x stubs are available
# pandas-stubs only supports up to pandas 2.3.x
# See: https://github.com/pandas-dev/pandas-stubs/issues/1101
[tool.ty.rules]
invalid-argument-type = "ignore"  # pandas type mismatches
unresolved-attribute = "ignore"   # pandas attributes not typed

[dependency-groups]
dev = [
    "ruff>=0.14.0",
    "ty>=0.0.13",
    "pytest>=8.3.5",
]
